crates/check_cli/tests/snapshots/main_cases_reporter_summary/reports_diagnostics_summary_lint_command.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `index.css`

```css


.brokenStyle { color: f( }

.style {
                color:
                fakeFunction()
}

```

## `index.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b
a ==b
a ==b
a ==b

debugger
debugger
debugger
debugger

let f;
let f;
let f;
		let f;
		let f;
		let f;
```

## `main.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b
a ==b
a ==b
a ==b

debugger
debugger
debugger
debugger

let f;
let f;
let f;
		let f;
		let f;
		let f;
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
reporter/parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The following files have parsing errors:
  
  - index.css
  
reporter/violations ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Some lint rules or assist actions reported some violations.
  
  i The following files have violations:
  
  - index.css (2 errors)
  - index.ts (20 errors, 8 warnings)
  - main.ts (20 errors, 8 warnings)
  
  i The following lint rules have violations:
  
  Rule Name                                        Diagnostics
  
  lint/correctness/noUnknownFunction               14 (2 errors, 12 warnings)
  lint/suspicious/noImplicitAnyLet                 16 (12 errors, 4 warnings)
  lint/suspicious/noDoubleEquals                   8 (8 errors)
  lint/suspicious/noRedeclare                      12 (12 errors)
  lint/suspicious/noDebugger                       8 (8 errors)

```

```block
Checked 3 files in <TIME>. No fixes applied.
Found 43 errors.
Found 16 warnings.
```
